--- a/examples/Gemfile
+++ b/examples/Gemfile
@@ -8,3 +8,4 @@ gem "carb-flow",    git: "git@github.com:Carburetor/carb-flow.git",
                     tag: "v0.1.0"
 gem "carb-inject",  git: "git@github.com:Carburetor/carb-inject.git",
                     tag: "v0.2.0"
+gem "pry-byebug"
