--- a/examples/Gemfile
+++ b/examples/Gemfile
@@ -1,11 +1,7 @@
 source "https://rubygems.org"
 
-gem "carb-core",    git: "git@github.com:Carburetor/carb-core.git",
-                    tag: "v0.1.0"
-gem "carb-service", git: "git@github.com:Carburetor/carb-service.git",
-                    tag: "v0.1.0"
-gem "carb-flow",    git: "git@github.com:Carburetor/carb-flow.git",
-                    tag: "v0.1.0"
-gem "carb-inject",  git: "git@github.com:Carburetor/carb-inject.git",
-                    tag: "v0.2.0"
+gem "carb-core",    path: "../../carb-core"
+gem "carb-service", path: "../../carb-service"
+gem "carb-flow",    path: "../../carb-flow"
+gem "carb-inject",  path: "../../carb-inject"
 gem "pry-byebug"
